# ads-github-tools

./: .gitignore  AUTHORS  BUGS  HACKING  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  _config.yml  aclocal.m4  bootstrap  configure  configure.ac  index.html  params.json
.cargo/: config.toml.in
autotools/: ads_PERL_INCLUDES.m4  ads_PERL_LIBDIR.m4  ads_PERL_MODULE.m4  ads_PROG_CARGO-dev-helper  ads_PROG_CARGO.m4  ads_PROG_PERL.m4
contrib/: ads-gh-repo  curl-gh  curl-gh-fout  curl-gh-fout-q  gh-remote-fixname-fork-to-origin
doc/: ads-github-tools-design-notes.org
downloads/: ads-github-tools-0.1.0.tar.gz.SHA-1  ads-github-tools-0.1.0.tar.gz.SHA-256  ads-github-tools-0.1.0.tar.gz.SHA-384  ads-github-tools-0.1.0.tar.gz.SHA-512  ads-github-tools-0.1.0.tar.gz.SHA3-224  ads-github-tools-0.1.0.tar.gz.SHA3-256  ads-github-tools-0.1.0.tar.gz.SHA3-384  ads-github-tools-0.1.0.tar.gz.SHA3-512  ads-github-tools-0.1.1.tar.gz.SHA-1  ads-github-tools-0.1.1.tar.gz.SHA-256  ads-github-tools-0.1.1.tar.gz.SHA-384  ads-github-tools-0.1.1.tar.gz.SHA-512  ads-github-tools-0.1.1.tar.gz.SHA3-224  ads-github-tools-0.1.1.tar.gz.SHA3-256  ads-github-tools-0.1.1.tar.gz.SHA3-384  ads-github-tools-0.1.1.tar.gz.SHA3-512  ads-github-tools-0.2.0.tar.gz.SHA-1  ads-github-tools-0.2.0.tar.gz.SHA-256  ads-github-tools-0.2.0.tar.gz.SHA-384  ads-github-tools-0.2.0.tar.gz.SHA-512  ads-github-tools-0.2.0.tar.gz.SHA3-224  ads-github-tools-0.2.0.tar.gz.SHA3-256  ads-github-tools-0.2.0.tar.gz.SHA3-384  ads-github-tools-0.2.0.tar.gz.SHA3-512  ads-github-tools-0.3.0.tar.gz.SHA-1  ads-github-tools-0.3.0.tar.gz.SHA-256  ads-github-tools-0.3.0.tar.gz.SHA-384  ads-github-tools-0.3.0.tar.gz.SHA-512  ads-github-tools-0.3.0.tar.gz.SHA3-224  ads-github-tools-0.3.0.tar.gz.SHA3-256  ads-github-tools-0.3.0.tar.gz.SHA3-384  ads-github-tools-0.3.0.tar.gz.SHA3-512  ads-github-tools-0.3.1.tar.gz.SHA-1  ads-github-tools-0.3.1.tar.gz.SHA-256  ads-github-tools-0.3.1.tar.gz.SHA-384  ads-github-tools-0.3.1.tar.gz.SHA-512  ads-github-tools-0.3.1.tar.gz.SHA3-224  ads-github-tools-0.3.1.tar.gz.SHA3-256  ads-github-tools-0.3.1.tar.gz.SHA3-384  ads-github-tools-0.3.1.tar.gz.SHA3-512  (+33 more)
src/: Makefile.am  Makefile.in
src/main/: Makefile.am  Makefile.in
src/main/bash/: Makefile.am  Makefile.in
src/main/perl/: Makefile.am  Makefile.in
src/main/resources/: Makefile.am  Makefile.in  adsgithubtools-perl5-inc-begin-block.snippet.in
src/main/rust/: Makefile.in
stylesheets/: styles.css
